--- a/main.html
+++ b/main.html
@@ -8,6 +8,51 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<table id="tbl">
+		<thead id="th1">
+			<th>NAME </th>
+			<th> KILLS</th>
+			<th> SAVED</th>
+			<th>  DEATH</th>
+			<th> REVIVES</th>
+			<th> WIN</th>
+		</thead>
+		<tbody >
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr class="lblue">
+				<td>Cool Doggo</td>
+				<td>13</td>
+				<td>4</td>
+				<td>8</td>
+				<td>7</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td>Andrews</td>
+				<td>19</td>
+				<td>2</td>
+				<td>10</td>
+				<td>11</td>
+				<td>0</td>
+			</tr>
+			<tr class="lblue">
+				<td>Strawberry</td>
+				<td>2</td>
+				<td>9</td>
+				<td>3</td>
+				<td>5</td>
+				<td>1</td>
+			</tr>
+			
+		</tbody>
+	</table>
     <!-- add table here -->
 
         
